# Palyra

./: .gitignore  .gitleaks.toml  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  justfile  npm-audit-dev-allowlist.json  osv-scanner.toml  package-lock.json  package.json  vite.config.ts
.githooks/: pre-push
.github/: pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  cli-full-regression.yml  cli-install-smoke.yml  codeql.yml  dependency-review.yml  release.yml  security.yml
apps/: README.md
apps/android/: README.md
apps/browser-extension/: README.md  background.js  content_script.js  lib.mjs  manifest.json  package.json  popup.js
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/docs/architecture/: desktop-onboarding-milestone-plan.md
apps/desktop/src-tauri/docs/security/advisories/: GHSA-wrw7-89jp-8q8g.md
apps/desktop/src-tauri/docs/security/dependency-graph/: glib.md
apps/desktop/src-tauri/src/: commands.rs  companion.rs  desktop_state.rs  discord_onboarding.rs  lib.rs  main.rs  onboarding.rs  openai_auth.rs  profile_registry.rs  snapshot.rs  supervisor.rs  tests.rs
apps/desktop/src-tauri/src/features/: mod.rs
apps/desktop/src-tauri/src/features/onboarding/: mod.rs
apps/desktop/src-tauri/src/features/onboarding/connectors/discord/: client.rs  mod.rs  state.rs
apps/desktop/src-tauri/src/tests/: support.rs
apps/desktop/src-tauri/tests/: glib_variantstriter_regression.rs
apps/ios/: README.md
apps/web/: README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
crates/palyra-a2ui/: Cargo.toml
crates/palyra-auth/: Cargo.toml
crates/palyra-browserd/: Cargo.toml
crates/palyra-cli/: Cargo.toml  build.rs
crates/palyra-common/: Cargo.toml
crates/palyra-common/src/: build.rs  config.rs  config_system.rs  context_references.rs  daemon_config_schema.rs  deployment_profiles.rs  feature_rollouts.rs  health.rs  ids.rs  lib.rs  local_runtime_ports.rs  net.rs  process_runner_input.rs  project_context.rs  redaction.rs  replay_bundle.rs  runtime_contracts.rs  runtime_preview.rs  tests.rs  tool_catalog.rs  versioned_json.rs  webhook.rs  workspace_patch.rs
crates/palyra-common/src/release_evals/: evaluator.rs  mod.rs  schema.rs
crates/palyra-common/tests/: release_eval_contract.rs
crates/palyra-connector-core/: Cargo.toml
crates/palyra-connector-discord/: Cargo.toml
crates/palyra-connector-discord/src/: adapter.rs  defaults.rs  ids.rs  lib.rs  normalize.rs  permissions.rs
crates/palyra-connectors/: Cargo.toml
crates/palyra-daemon/: Cargo.toml  (+1 more)
crates/palyra-plugins/runtime/: Cargo.toml
crates/palyra-plugins/runtime/src/: lib.rs
crates/palyra-workerd/: Cargo.toml
crates/palyra-workerd/src/: lib.rs
docs-codebase/: README.md
fuzz/: Cargo.toml
roadmap/: summary.md
scripts/: check-architecture-boundaries.sh  check-channel-provider-boundaries.sh  check-desktop-glib-patch.sh  check-high-risk-patterns.sh  check-runtime-artifacts.sh  clean-runtime-artifacts.sh  js-artifacts.mjs  run-pre-push-checks.sh  run-vp-lint.mjs  validate-npm-audit-dev-allowlist.mjs  validate-npm-audit-dev-allowlist.test.mjs
(+1019 files in other folders)
