[package]
name = "palyra-workerd"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
palyra-common = { version = "0.1.0", path = "../palyra-common" }
serde.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
serde_json.workspace = true
