[package]
name = "palyra-desktop-control-center"
version = "0.1.0"
edition = "2021"
license-file = "../../../LICENSE"
publish = false

[workspace]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.102"
palyra-common = { path = "../../../crates/palyra-common" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "cookies", "native-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
ulid = "1.2.0"
webbrowser = "1.0.6"
which = "7.0.3"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tauri = { version = "2.5.1", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
