[package]
name = "palyra-plugins-runtime"
version.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
palyra-plugins-sdk = { version = "0.1.0", path = "../sdk" }
thiserror.workspace = true
wasmtime.workspace = true
